# mhrsb_anomaly_calculator

./: .gitignore  README.md  vetur.config.js
calculator/: components.d.ts  package-lock.json  package.json  vite.config.ts
calculator/key/: mhrsb_calculator.key  mhrsb_calculator.key.pub
calculator/rust_workspace/: Cargo.toml
calculator/rust_workspace/calculator/: Cargo.toml
calculator/rust_workspace/calculator/benches/: case1.rs  case2.rs  case3.rs  case4.rs
calculator/rust_workspace/calculator/src/: full_equipments.rs  lib.rs
calculator/rust_workspace/calculator/src/calc/: calc_data_manager.rs  calc_equipment.rs  calc_equips_iterator.rs  calc_point.rs  calc_result.rs  calc_ui_generator.rs  calc_vector.rs  calculator.rs  constant.rs  deco.rs  deco_combination.rs  full_equipments.rs  mod.rs  skills.rs  types.rs
calculator/rust_workspace/calculator/src/data/: armor.rs  data_manager.rs  deco.rs  mod.rs  parser.rs  skill.rs
calculator/rust_workspace/calculator/src/test/: mod.rs
calculator/rust_workspace/calculator/src/utils/: parse.rs
calculator/rust_workspace/src-tauri/: Cargo.toml  tauri.conf.json
calculator/rust_workspace/src-tauri/data/: armor.json  skill.json
calculator/rust_workspace/src-tauri/src/: main.rs
calculator/src/: App.vue  main.ts
calculator/src/components/: AdditionalSkillsTable.vue  AnomaliesTab.vue  PickBanTab.vue  ResultFavoriteRow.vue  ResultFavoriteTab.vue  SearchFavoriteTab.vue  SimulateResultRow.vue  SimulateResultTable.vue  SimulateTab.vue  StatTable.vue  TalismansTab.vue
calculator/src/data/: armor.json  deco.json  skill.json  skill_category.json
calculator/src/definition/: armor_define.ts  calculate_result.ts  deco_define.ts  language.ts  skill_category_define.ts
calculator/src/model/: data_manager.ts  ui.ts  (+2 more)
calculator/updater/: update.json
crawler/: main.ts  mhrice.ts  package-lock.json  package.json  tsconfig.json  util.ts
crawler/data/: armor.json  deco.json  skill.json
crawler/definition/: skill_define.ts
crawler/original_data/: mhrice.json.txt
(+16 files in other folders)
