[package]
name = "mhr-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "case1"
harness = false

[[bench]]
name = "case2"
harness = false

[[bench]]
name = "case3"
harness = false

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "derive"] }
csv = "1.1.6"
itertools = "0.10.4"
lazy_static = "1.4.0"
log = "0.4.17"
regex = "1"
futures-util = "0.3.24"
anyhow = "1.0.65"
nohash-hasher = "0.2.0"
nalgebra = "0.31.1"
num = "0.4.0"

[dev-dependencies]
tokio = { version = "*", features = ["macros", "rt"] }
criterion = "0.4"
