[package]
name = "mhr-sunbreak-anomaly-calculator"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "derive"] }
tauri = { version = "1.1.1", features = ["api-all", "devtools", "updater"] }
csv = "1.1.6"
itertools = "0.10.4"
lazy_static = "1.4.0"
env_logger = "0.9.1"
log = "0.4.17"
mhr-calculator = { path = "../calculator" }
tokio = { version = "1.21.1", features = ["rt", "macros"] }
nohash-hasher = "0.2.0"
rayon = "1.5"
num_cpus = "1.13.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.dev.package.mhr-calculator]
opt-level = 3
